# tinycompiler

./: .gitignore  AST.h  CMakeLists.txt  ClassGen.cpp  ClassGen.h  CodeGen.cpp  CodeGen.h  InstEmitter.cpp  Lexer.cpp  Lexer.h  Optimizer.cpp  Optimizer.h  Parser.cpp  Parser.h  README.md  Sema.cpp  Sema.h  TinyCPU.td  TinyCPUBackend.cpp  TinyCPUBackend.h  TinyTableGen.cpp  TinyTableGenBackends.h  main.cpp  test1.js  test1.ll  test2.js  test2.ll  test2.s  test3.js  test3.ll  test_loop.js  test_loop.ll
